--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,10 @@
         android:supportsRtl="true"
         android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/AppTheme">
-        <activity android:name=".ThirdActivity"></activity>
-        <activity android:name=".SecondActivity" />
+        <activity android:name=".ThirdActivity"
+            android:launchMode="singleTop" />
+        <activity android:name=".SecondActivity"
+            android:launchMode="singleTop" />
         <activity android:name=".FirstActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
